--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+/* 
+    Styles for the body element:
+    - Set margin to 0 to remove default margin
+    - Define font-family with a fallback list of system fonts for cross-browser consistency
+    - Apply anti-aliasing to improve font rendering on WebKit-based browsers
+*/
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,6 +13,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* 
+    Styles for the code element:
+    - Define font-family with a fallback list of monospace fonts for displaying code
+*/
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
